third_party/move/move-compiler/tests/move_check/inlining/return.exp
error[E14003]: feature not supported in inlined functions
  ┌─ tests/move_check/inlining/return.move:3:9
  │
3 │         return 5
  │         ^^^^^^^^ return statements currently not supported

